@@ -20,8 +20,8 @@ Dist::Zilla::Plugin::TaskWeaver = 0
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::Authority = 0
-Dist::Zilla::Plugin::NoTabsTests = 0
-Dist::Zilla::Plugin::EOLTests = 0.02
+Dist::Zilla::Plugin::Test::NoTabs = 0
+Dist::Zilla::Plugin::Test::EOL = 0.16
 Dist::Zilla::Plugin::StaticVersion = 0
 Dist::Zilla::Plugin::CheckChangesHasContent = 0
 Dist::Zilla::Role::PluginBundle::Easy = 0
